force-app/main/default/objects/OrderItem/fields/Agreed_Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Final_Price__c</fullName>
    <description>Agreed Final price to be filled on the order line record - GCPM - 2908</description>
    <label>Agreed Final Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>