force-app/main/default/objects/OrderItem/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>Approval Flow Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Under Revision</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>