force-app/main/default/objects/OrderItem/fields/OrderItemNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderItemNumber__c</fullName>
    <formula>IF(
  CONTAINS(PMC_CPQ_SAPOrderLineID__c, &quot;_&quot;),
  TEXT( VALUE( RIGHT(PMC_CPQ_SAPOrderLineID__c, LEN(PMC_CPQ_SAPOrderLineID__c) - FIND(&quot;_&quot;, PMC_CPQ_SAPOrderLineID__c)) ) ),
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderItemNumber</label>
    <type>Text</type>
</CustomField>