force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Account)</relationshipLabel>
    <relationshipName>Order_Products2</relationshipName>
    <type>Lookup</type>
</CustomField>