force-app/main/default/objects/OrderItem/fields/PMC_CPQ_AlternateProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_AlternateProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the Alternative product for the current product in case the current product is unavailable</description>
    <label>Alternate Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>