force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ATPStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ATPStatus__c</fullName>
    <label>ATP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Partially Confirmed</fullName>
            </value>
            <value>
                <fullName>Fully Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>