force-app/main/default/objects/OrderItem/fields/PMC_CPQ_CallPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CallPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Price</label>
    <type>Checkbox</type>
</CustomField>