force-app/main/default/objects/OrderItem/fields/PMC_CPQ_CombineInvoice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CombineInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combine Invoice</label>
    <type>Checkbox</type>
</CustomField>