force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ConfirmedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConfirmedQuantity__c</fullName>
    <label>Confirmed Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>