force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ContractType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ContractType__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>FPD</fullName>
            </value>
            <value>
                <fullName>FPD Ex-Space</fullName>
            </value>
            <value>
                <fullName>Priced</fullName>
            </value>
            <value>
                <fullName>Priced Ex-Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>