force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Currency__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Currency__c</fullName>
    <description>This field indicates the Currency type</description>
    <label>Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>