force-app/main/default/objects/OrderItem/fields/PMC_CPQ_DefaultBillingBlock__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DefaultBillingBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field Captures default Billing Block</description>
    <inlineHelpText>Default Billing block value</inlineHelpText>
    <label>Default Billing Block</label>
    <type>Checkbox</type>
</CustomField>