force-app/main/default/objects/OrderItem/fields/PMC_CPQ_DefaultDeliveryBlock__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DefaultDeliveryBlock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field Captures default Delivery Block</description>
    <inlineHelpText>Default delivery block value</inlineHelpText>
    <label>Default Delivery Block</label>
    <type>Checkbox</type>
</CustomField>