force-app/main/default/objects/OrderItem/fields/PMC_CPQ_DeferredPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_DeferredPrice__c</fullName>
    <description>This field captures the deferred price</description>
    <inlineHelpText>This field captures the deferred price</inlineHelpText>
    <label>Deferred Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>