force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Destination__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Destination__c</fullName>
    <description>This field captures destination</description>
    <inlineHelpText>This field captures the destination for the order</inlineHelpText>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>