force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Discount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Discount__c</fullName>
    <label>Price Adjustments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>