force-app/main/default/objects/OrderItem/fields/PMC_CPQ_EstFreightPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
    <label>Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>