force-app/main/default/objects/OrderItem/fields/PMC_CPQ_EstimatedShipmentDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_EstimatedShipmentDate__c</fullName>
    <description>This field is to store the Estimated Delivery Date which will be received as part of 066I and will be stored in the Mosaic Direct Delivery Dashboard.</description>
    <label>Estimated Shipment Date</label>
    <type>Date</type>
</CustomField>