force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExchangeRate__c</fullName>
    <description>This field captures the exchange rate of the Order product</description>
    <inlineHelpText>This field captures the exchange rate of the Order product</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>