force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ExpectedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExpectedDeliveryDate__c</fullName>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>