force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ExSpaceIndicator__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ExSpaceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field captures the ex space indicator of the Order product.</description>
    <inlineHelpText>This field captures the ex space indicator of the Order product.</inlineHelpText>
    <label>Ex Space Indicator</label>
    <type>Checkbox</type>
</CustomField>