force-app/main/default/objects/OrderItem/fields/PMC_CPQ_FinalAgreedPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FinalAgreedPrice__c</fullName>
    <description>This field is will store the Final Agreed Price and send it back to SAP after the Order is placed.</description>
    <label>Final Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>