force-app/main/default/objects/OrderItem/fields/PMC_CPQ_FixedPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
    <label>Fixed Payment Due Date</label>
    <type>Date</type>
</CustomField>