force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Floorplusfreight__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Floorplusfreight__c</fullName>
    <formula>PMC_CPQ_Floorprice__c + PMC_CPQ_EstFreightPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price + Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>