force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Floorprice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Floorprice__c</fullName>
    <description>This is as per the US 2921</description>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>