force-app/main/default/objects/OrderItem/fields/PMC_CPQ_FPDPricefromPriceFx__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_FPDPricefromPriceFx__c</fullName>
    <description>Created as part of GDASF-9360. This field captures the FPD price from Price Fx.</description>
    <inlineHelpText>The FPD List Price for the Order Product is only relevant when the contract type of the product is specified as FPD</inlineHelpText>
    <label>FPD List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>