force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Incoterms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Incoterms__c</fullName>
    <description>This field captures the user input for Incoterms.</description>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
    </valueSet>
</CustomField>