force-app/main/default/objects/OrderItem/fields/PMC_CPQ_IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_IntegrationStatus__c</fullName>
    <description>This field captures the integration status of the Order product</description>
    <inlineHelpText>This field captures the integration status of the Order product</inlineHelpText>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>