force-app/main/default/objects/OrderItem/fields/PMC_CPQ_LinePONumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_LinePONumber__c</fullName>
    <description>This field will be used to capture the PO Number at a order line level - leveraged in the Contract Document forms for North America</description>
    <label>Customer Purchase Order #</label>
    <length>35</length>
    <type>Text</type>
</CustomField>