force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ListPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ListPrice__c</fullName>
    <description>This field is to capture the List Price from SAP and Store it in the standard List Price field using flow on Create.</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>