force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ModeofTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
    <description>This field captures the Mode of Transportation value.</description>
    <inlineHelpText>Mode of Transportation for this order line</inlineHelpText>
    <label>Mode of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_MoT</valueSetName>
    </valueSet>
</CustomField>