force-app/main/default/objects/OrderItem/fields/PMC_CPQ_NetTotalPrice__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_NetTotalPrice__c</fullName>
    <label>Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>