force-app/main/default/objects/OrderItem/fields/PMC_CPQ_OrderLineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderLineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Line ID</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Order Products (Order Line ID)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>