force-app/main/default/objects/OrderItem/fields/PMC_CPQ_OrderLineStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_OrderLineStatus__c</fullName>
    <label>Order Line Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Completely Shipped</fullName>
                <isActive>false</isActive>
                <label>Completely Shipped</label>
            </value>
            <value>
                <fullName>Partially Shipped</fullName>
                <isActive>false</isActive>
                <label>Partially Shipped</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>