force-app/main/default/objects/OrderItem/fields/PMC_CPQ_Owner__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is to show the owner of the respective order.</description>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>