force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PackageType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PackageType__c</fullName>
    <description>The Packaging Type of the Product added to the quote.</description>
    <label>Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_PackagingType</valueSetName>
    </valueSet>
</CustomField>