force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentDueDate__c</fullName>
    <description>This field captures Payment Due date .</description>
    <inlineHelpText>Payment Due Date.</inlineHelpText>
    <label>Payment Due Date</label>
    <type>Date</type>
</CustomField>