force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PaymentTerms__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PaymentTerms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Against Documents</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 5 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 7 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 10 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 15 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 30 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 45 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Doc - 60 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 90 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 120 Days From BL</fullName>
            </value>
            <value>
                <fullName>Cash Against Documents - 180 Days From BL</fullName>
            </value>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Net 1 Day - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 2 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 3 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>05 Days - Document Lock Date</fullName>
            </value>
            <value>
                <fullName>Net 7 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 10 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 14 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 15 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 17 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 21 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 28 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 29 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 30 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 31 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 35 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 42 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 45 Days - From Invoicing Date</fullName>
            </value>
            <value>
                <fullName>Net 60 Days - From Invoicing Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>