force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PriceByDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceByDate__c</fullName>
    <label>Price By Date</label>
    <type>Date</type>
</CustomField>