force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PriceGuidanceCeiling__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PriceGuidanceCeiling__c</fullName>
    <description>Created as part of GCPM-4521</description>
    <label>Ceiling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>