force-app/main/default/objects/OrderItem/fields/PMC_CPQ_PricingDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_PricingDate__c</fullName>
    <description>This field captures Pricing date.</description>
    <inlineHelpText>This field captures the pricing date</inlineHelpText>
    <label>Price by Date</label>
    <type>Date</type>
</CustomField>