force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Location</label>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>