force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSKU__c</fullName>
    <label>Product SKU</label>
    <length>180</length>
    <type>Text</type>
</CustomField>