force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ReasonOfRejectionOfItem__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ReasonOfRejectionOfItem__c</fullName>
    <description>This field indicates the Reason of Rejection of the Order</description>
    <label>Reason Of Rejection Of Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cust Initiated - Ordering Error</fullName>
            </value>
            <value>
                <fullName>Cancellation Contract Expired</fullName>
            </value>
            <value>
                <fullName>Supply/Availability</fullName>
            </value>
            <value>
                <fullName>Rejected by workflow</fullName>
            </value>
            <value>
                <fullName>Cust Initiated - Price Dispute</fullName>
            </value>
            <value>
                <fullName>Volume low by Agronomic adjustments</fullName>
            </value>
            <value>
                <fullName>CSR Initiated - Order Entry Error</fullName>
            </value>
            <value>
                <fullName>Credit Management</fullName>
            </value>
            <value>
                <fullName>Open Acct. vs Pre-Pay</fullName>
            </value>
            <value>
                <fullName>Contract Fulfilled</fullName>
            </value>
            <value>
                <fullName>Shipment Diverted - Mosaic Request</fullName>
            </value>
            <value>
                <fullName>Shipment Diverted - Customer Request</fullName>
            </value>
            <value>
                <fullName>Carrier change</fullName>
            </value>
            <value>
                <fullName>DH Cancellation</fullName>
            </value>
            <value>
                <fullName>B2B Order Rejected</fullName>
            </value>
            <value>
                <fullName>Canpotex Rejection</fullName>
            </value>
            <value>
                <fullName>Order cannot be fulfilled</fullName>
            </value>
            <value>
                <fullName>Reshipment</fullName>
            </value>
            <value>
                <fullName>Diversion to New Customer</fullName>
            </value>
            <value>
                <fullName>Deleted from SFDC via Amendment</fullName>
            </value>
            <value>
                <fullName>Due to Complementary Invoice</fullName>
            </value>
            <value>
                <fullName>SAP Order Deleted</fullName>
            </value>
            <value>
                <fullName>Delay in Delivery</fullName>
                <isActive>false</isActive>
                <label>Delay in Delivery</label>
            </value>
            <value>
                <fullName>Delay in Service</fullName>
                <isActive>false</isActive>
                <label>Delay in Service</label>
            </value>
            <value>
                <fullName>Incorrect item</fullName>
                <isActive>false</isActive>
                <label>Incorrect item</label>
            </value>
            <value>
                <fullName>Incorrect order</fullName>
                <isActive>false</isActive>
                <label>Incorrect order</label>
            </value>
            <value>
                <fullName>Pricing Reasons</fullName>
                <isActive>false</isActive>
                <label>Pricing Reasons</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>