force-app/main/default/objects/OrderItem/fields/PMC_CPQ_RequestedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedDeliveryDate__c</fullName>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>