force-app/main/default/objects/OrderItem/fields/PMC_CPQ_RequestedShipDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedShipDate__c</fullName>
    <description>This field captures the Requested ship date of the order product.</description>
    <inlineHelpText>This field captures the Requested ship date of the order product.</inlineHelpText>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>