force-app/main/default/objects/OrderItem/fields/PMC_CPQ_SAPOrderID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderID__c</fullName>
    <description>This Field is used to capture the relevant Order ID in SAP System.</description>
    <externalId>true</externalId>
    <inlineHelpText>Order ID in SAP System.</inlineHelpText>
    <label>SAP Order ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>