force-app/main/default/objects/OrderItem/fields/PMC_CPQ_SAPOrderLineID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPOrderLineID__c</fullName>
    <description>This Field is used to capture the relevant Order Line ID in SAP System.</description>
    <externalId>true</externalId>
    <inlineHelpText>Order Line ID in SAP System</inlineHelpText>
    <label>SAP Order Line ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>