force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ServiceRenderedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ServiceRenderedDate__c</fullName>
    <description>This field captures the Service Rendered Date.</description>
    <label>Service Rendered Date</label>
    <type>Date</type>
</CustomField>