force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Shipping Address of the Ship to Account associated.</description>
    <label>Shipping Address</label>
    <referenceTo>Address</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>