force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ShippingInstructions__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingInstructions__c</fullName>
    <label>Shipping Instructions</label>
    <type>TextArea</type>
</CustomField>