force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ShippingType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingType__c</fullName>
    <label>Shipping Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>