force-app/main/default/objects/OrderItem/fields/PMC_CPQ_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Ship To)</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>