force-app/main/default/objects/OrderItem/fields/PMC_CPQ_SoldtoAccount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldtoAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products (Sold to Account)</relationshipLabel>
    <relationshipName>Order_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>