force-app/main/default/objects/OrderItem/fields/PMC_CPQ_TotalAvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalAvailableQuantity__c</fullName>
    <description>This field captures the remaining quantity out of the total contracted quantity. This quantity will be assigned to the the Subscription Total Available quantity.</description>
    <label>Total Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>