force-app/main/default/objects/OrderItem/fields/PMC_CPQ_TotalConsumedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalConsumedQuantity__c</fullName>
    <description>This field is to show the quantity that will be shipped/consumed from the contracted quantity.</description>
    <label>Total Consumed Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>