force-app/main/default/objects/OrderItem/fields/PMC_CPQ_TotalContractedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalContractedQuantity__c</fullName>
    <description>This field is to show the total quantity contracted.</description>
    <label>Total Contracted Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>