force-app/main/default/objects/OrderItem/fields/PMC_CPQ_TotalOrderedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TotalOrderedQuantity__c</fullName>
    <description>This field captures the quantity consumed/ordered from the total contracted quantity. This quantity will be assigned to the the Subscription Total Ordered quantity.</description>
    <label>Total Ordered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>