force-app/main/default/objects/OrderItem/fields/PMC_CPQ_UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>