force-app/main/default/objects/OrderItem/fields/PMC_DH_CallPriceRequestedBySystem__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CallPriceRequestedBySystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Price Requested By System</label>
    <type>Checkbox</type>
</CustomField>