force-app/main/default/objects/OrderItem/fields/PMC_DH_CustomerCallPriceDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CustomerCallPriceDate__c</fullName>
    <label>Customer Call Price Date</label>
    <type>Date</type>
</CustomField>