force-app/main/default/objects/OrderItem/fields/PMC_DH_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ItemNumber__c</fullName>
    <label>Item Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>